Code cleanup in SchemaUtils and XSD - part 1